# SpeakMyBook

./: .gitignore  LICENSE  README.md
go2exe/AppRun/: build_notice.md  go.mod  main.go
python/: .gitignore  app.py  app.pyw  pyproject.toml
